--- a/Sep2018_MVC/Areas/Staff/Views/Giaovu/Statistical.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Giaovu/Statistical.cshtml
@@ -17,7 +17,7 @@
                         <div class="thumbnail">
 
                             <div class="caption">
-                                <input class="btn btn-default" value="@item.ShoolYearBegin.Value.Year" name="year" type="text" hidden="hidden" />
+                                <input class="btn btn-default" value="@item.ShoolYearEnd.Value.Year" name="year" type="text" hidden="hidden" />
                                 <input class="btn btn-success" value="Xem thống kê" type="submit" />
                             </div>
                         </div>
