--- a/Sep2018_MVC/Areas/Staff/Views/Giaovu/StatisticalYear.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Giaovu/StatisticalYear.cshtml
@@ -8,6 +8,14 @@
     int tre = 0;
     int phep = 0;
     int co = 0;
+    int sumvang = 0;
+    int sumtre = 0;
+    int sumco = 0;
+    int sumphep = 0;
+    double didsumvang = 0;
+    double didsumtre = 0;
+    double didsumco = 0;
+    double didsumphep = 0;
 }
 <style>
     #customers {
@@ -63,11 +71,243 @@
             background-color: #b7efb1;
             color: black;
         }
+    div.bodyd {
+        font-size: 15px;
+    }
+    .set-size {
+        font-size: 10em;
+    }
+
+    .charts-container:after {
+        clear: both;
+        content: "";
+        display: table;
+    }
+
+    .pie-wrapper {
+        height: 1em;
+        width: 1em;
+        float: left;
+        margin: 15px;
+        position: relative;
+    }
+
+        .pie-wrapper:nth-child(3n+1) {
+            clear: both;
+        }
+
+        .pie-wrapper .pie {
+            height: 100%;
+            width: 100%;
+            clip: rect(0, 1em, 1em, 0.5em);
+            left: 0;
+            position: absolute;
+            top: 0;
+        }
+
+            .pie-wrapper .pie .half-circle {
+                height: 100%;
+                width: 100%;
+                border: 0.1em solid #3498db;
+                border-radius: 50%;
+                clip: rect(0, 0.5em, 1em, 0);
+                left: 0;
+                position: absolute;
+                top: 0;
+            }
+
+        .pie-wrapper .label {
+            background: #34495e;
+            border-radius: 50%;
+            bottom: 0.4em;
+            color: #ecf0f1;
+            cursor: default;
+            display: block;
+            font-size: 0.25em;
+            left: 0.4em;
+            line-height: 2.6em;
+            position: absolute;
+            right: 0.4em;
+            text-align: center;
+            top: 0.4em;
+        }
+
+            .pie-wrapper .label .smaller {
+                color: #bdc3c7;
+                font-size: .45em;
+                padding-bottom: 20px;
+                vertical-align: super;
+            }
+
+        .pie-wrapper .shadow {
+            height: 100%;
+            width: 100%;
+            border: 0.1em solid #bdc3c7;
+            border-radius: 50%;
+        }
+
+        .pie-wrapper.style-2 .label {
+            background: none;
+            color: #7f8c8d;
+        }
+
+            .pie-wrapper.style-2 .label .smaller {
+                color: #bdc3c7;
+            }
+
+        .pie-wrapper.progress-30 .pie .right-side {
+            display: none;
+        }
+
+        .pie-wrapper.progress-30 .pie .half-circle {
+            border-color: #3498db;
+        }
+
+        .pie-wrapper.progress-30 .pie .left-side {
+            -webkit-transform: rotate(108deg);
+            transform: rotate(108deg);
+        }
+
+        .pie-wrapper.progress-60 .pie {
+            clip: rect(auto, auto, auto, auto);
+        }
+
+            .pie-wrapper.progress-60 .pie .right-side {
+                -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
+            }
+
+            .pie-wrapper.progress-60 .pie .half-circle {
+                border-color: #9b59b6;
+            }
+
+            .pie-wrapper.progress-60 .pie .left-side {
+                -webkit-transform: rotate(216deg);
+                transform: rotate(216deg);
+            }
+
+        .pie-wrapper.progress-90 .pie {
+            clip: rect(auto, auto, auto, auto);
+        }
+
+            .pie-wrapper.progress-90 .pie .right-side {
+                -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
+            }
+
+            .pie-wrapper.progress-90 .pie .half-circle {
+                border-color: #e67e22;
+            }
+
+            .pie-wrapper.progress-90 .pie .left-side {
+                -webkit-transform: rotate(324deg);
+                transform: rotate(324deg);
+            }
+
+        .pie-wrapper.progress-45 .pie .right-side {
+            display: none;
+        }
+
+        .pie-wrapper.progress-45 .pie .half-circle {
+            border-color: #1abc9c;
+        }
+
+        .pie-wrapper.progress-45 .pie .left-side {
+            -webkit-transform: rotate(162deg);
+            transform: rotate(162deg);
+        }
+
+        .pie-wrapper.progress-75 .pie {
+            clip: rect(auto, auto, auto, auto);
+        }
+
+            .pie-wrapper.progress-75 .pie .right-side {
+                -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
+            }
+
+            .pie-wrapper.progress-75 .pie .half-circle {
+                border-color: #8e44ad;
+            }
+
+            .pie-wrapper.progress-75 .pie .left-side {
+                -webkit-transform: rotate(270deg);
+                transform: rotate(270deg);
+            }
+
+        .pie-wrapper.progress-95 .pie {
+            clip: rect(auto, auto, auto, auto);
+        }
+
+            .pie-wrapper.progress-95 .pie .right-side {
+                -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
+            }
+
+            .pie-wrapper.progress-95 .pie .half-circle {
+                border-color: #e74c3c;
+            }
+
+            .pie-wrapper.progress-95 .pie .left-side {
+                -webkit-transform: rotate(342deg);
+                transform: rotate(342deg);
+            }
+
+    .pie-wrapper--solid {
+        border-radius: 50%;
+        overflow: hidden;
+    }
+
+        .pie-wrapper--solid:before {
+            border-radius: 0 100% 100% 0%;
+            content: '';
+            display: block;
+            height: 100%;
+            margin-left: 50%;
+            -webkit-transform-origin: left;
+            transform-origin: left;
+        }
+
+        .pie-wrapper--solid .label {
+            background: transparent;
+        }
+
+        .pie-wrapper--solid.progress-65 {
+            background: linear-gradient(to right, #e67e22 50%, #34495e 50%);
+        }
+
+            .pie-wrapper--solid.progress-65:before {
+                background: #e67e22;
+                -webkit-transform: rotate(126deg);
+                transform: rotate(126deg);
+            }
+
+        .pie-wrapper--solid.progress-25 {
+            background: linear-gradient(to right, #9b59b6 50%, #34495e 50%);
+        }
+
+            .pie-wrapper--solid.progress-25:before {
+                background: #34495e;
+                -webkit-transform: rotate(-270deg);
+                transform: rotate(-270deg);
+            }
+
+        .pie-wrapper--solid.progress-88 {
+            background: linear-gradient(to right, #3498db 50%, #34495e 50%);
+        }
+
+            .pie-wrapper--solid.progress-88:before {
+                background: #3498db;
+                -webkit-transform: rotate(43.2deg);
+                transform: rotate(43.2deg);
+            }
+
 </style>
 <br />
 <br>
 <div class="container" style="padding:1em">
-    <div class="">
+
+    <div>
         @foreach (var ite in Model)
         {
             <div class="col-sm-6 col-md-4">
@@ -84,12 +324,14 @@
 
                                 <div class="col-sm-6 col-md-4">
                                     <div class="thumbnail">
+
                                         <h4>@clas.ClassName</h4>
                                         @{
-                                            int listvang = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.FK_AttendanceDetail_Type == 1).Count();
-                                            int listre = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.FK_AttendanceDetail_Type == 4).Count();
-                                            int lisphep = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.FK_AttendanceDetail_Type == 2).Count();
-                                            int lisco = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.FK_AttendanceDetail_Type == 3).Count();
+                                            int n = int.Parse(ViewBag.year);
+                                            int listvang = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.Attendance.Date.Value.Year == n && x.User.Class.Course.CourseName == ite.CourseName && x.FK_AttendanceDetail_Type == 3).Count();
+                                            int listre = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.Attendance.Date.Value.Year == n && x.User.Class.Course.CourseName == ite.CourseName && x.FK_AttendanceDetail_Type == 4).Count();
+                                            int lisphep = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.Attendance.Date.Value.Year == n && x.User.Class.Course.CourseName == ite.CourseName && x.FK_AttendanceDetail_Type == 2).Count();
+                                            int lisco = db.AttendanceDetails.Where(x => x.User.Class.ClassName == clas.ClassName && x.Attendance.Date.Value.Year == n && x.User.Class.Course.CourseName == ite.CourseName && x.FK_AttendanceDetail_Type == 1).Count();
 
                                             <table id="customers">
                                                 <tr>
@@ -116,6 +358,10 @@
                                         }
                                     </div>
                                 </div>
+                                sumco += co;
+                                sumphep += phep;
+                                sumtre += tre;
+                                sumvang += vang;
                             }
                         }
                         <span style="color:black"><i>Vắng     : @vang</i></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -124,11 +370,73 @@
                         <span style="color:green"><i>Có :@co</i></span>
 
                     </div>
-                    
+                    <br />
                 </div>
             </div>
 
         }
+        @{
+            int total = sumvang + sumtre + sumphep + sumco;
+            didsumvang = (double)sumvang / total * 100;
+            didsumvang = Math.Round(didsumvang,1);
+            didsumtre = (double)sumtre / total * 100;
+            didsumtre = Math.Round(didsumtre,1);
+            didsumco = (double)sumco / total * 100;
+            didsumco = Math.Round(didsumco,1);
+            didsumphep = (double)sumphep / total * 100;
+            didsumphep = Math.Round(didsumphep,1);
+
+        }
+        
     </div>
+    <br />
+    
 </div>
+<did class="">
+    <div class="set-size charts-container">
+
+
+        <div class="pie-wrapper progress-0">
+            <span class="label">@didsumvang<span class="smaller">%</span></span>
+            <div class="pie">
+                <div class="left-side half-circle"></div>
+                <div class="right-side half-circle"></div>
+            </div>
+            <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%Vắng</h4>
+        </div>
+
+        <div class="pie-wrapper progress-0">
+            <span class="label">@didsumtre<span class="smaller">%</span></span>
+            <div class="pie">
+                <div class="left-side half-circle"></div>
+                <div class="right-side half-circle"></div>
+            </div>
+
+            <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%Trễ</h4>
+        </div>
+        <div class="pie-wrapper progress-0">
+            <span class="label">@didsumphep<span class="smaller">%</span></span>
+            <div class="pie">
+                <div class="left-side half-circle"></div>
+                <div class="right-side half-circle"></div>
+            </div>
+            <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%Phép</h4>
+
+        </div>
+
+        <div class="pie-wrapper progress-75">
+            <h4 style="width:300px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%Có đi học</h4>
+
+            <span class="label">@didsumco<span class="smaller">%</span></span>
+            <div class="pie">
+                <div class="left-side half-circle"></div>
+                <div class="right-side half-circle"></div>
+            </div>
+
+        </div>
+        <br />
+        <br />
+        <br />
+    </div>
+</did>
 
