--- a/Sep2018_MVC/Areas/Staff/Views/Shared/LayoutGiaovu.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/LayoutGiaovu.cshtml
@@ -17,9 +17,23 @@
     <link href="~/Areas/Staff/Assert/Styles/jquery.gritter.css" rel="stylesheet" />
     <link href="~/Areas/Staff/Assert/Styles/styleAdmin.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
-
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="~/Areas/Staff/Assert/Styles/style1.css" rel="stylesheet" />
     <link href="~/Areas/Staff/Assert/Styles/style-responsive.css" rel="stylesheet" />
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <link media="all" type="text/css" rel="stylesheet" href="https://bootsnipp.com/css/fullscreen.css">
+    <script type="text/javascript">
+        (function () {
+            var bsa = document.createElement('script');
+            bsa.type = 'text/javascript';
+            bsa.async = true;
+            bsa.src = '//s3.buysellads.com/ac/bsa.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(bsa);
+        })();
+    </script>
     <script src="~/Areas/Staff/Assert/Script/Chart.js"></script>
     <!-- My Minh -->
     <link href="~/Areas/Staff/Assert/Styles/bootstrap.min.css" rel="stylesheet" />
@@ -221,12 +235,10 @@
         </section>
         <!--main content end-->
         <!--footer start-->
-        <footer class="site-footer" style="background-color:black">
-            <div class="text-center" style="background-color:black">
+        <footer class="" style="background-color:black">
+            <div class="" style="background-color:black">
                 2018 - Đại học Văn Lang
-                <a href="~/Areas/Staff/Giaovu" class="go-top">
-                    <i class="fa fa-angle-up"></i>
-                </a>
+               
             </div>
         </footer>
         <!--footer end-->
